# local_garminplus

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  PLAN.md  README.md  ci.yml.example  pyproject.toml
config/: goals.md  metric_mapping.yml  scoring.yml  sport_aliases.yml
src/health_manager/: __init__.py  cli.py  config.py  dashboard.py  ingest.py  intervals_client.py  metrics.py  recommender.py  reports.py  scoring.py  storage.py  workout_library.py
tests/: conftest.py  test_config.py  test_dashboard.py  test_doctor.py  test_ingest_and_reports.py  test_recommender.py  test_scoring.py  test_sport_aliases.py  test_workout_library.py
tests/fixtures/: activities_sample.json  activity_detail_a3.json  wellness_sample.json
workouts/bike/: endurance_75.md  sweet_spot_3x12.md
workouts/recovery/: easy_walk_30.md  mobility_20.md
workouts/run/: 10K_Tempo.json  10K_Tempo.md  15K_Speed_Up.json  15K_Speed_Up.md  250x12.json  250x12.md  400mx12.json  400mx12.md  Easy.json  Easy.md  Lactate_Threshold_HR.json  Lactate_Threshold_HR.md  VO2Max_HR.json  VO2Max_HR.md  easy_z2_45.md  long_run_90.md  threshold_intervals.md
workouts/strength/: full_body_a.md  full_body_b.md
